Add VM options